modifying DESCRIPTION and package name

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: bootcamp_2021
+Package: bootcamp2021
 Type: Package
 Title: Statistics Bootcamp 2021
 Version: 0.00.1
@@ -12,31 +12,24 @@ Authors@R:
 					role = c("aut"),
 					email = "SNA4DS@jads.nl"))
 Maintainer: Roger Leenders <r.t.a.j.leenders@jads.nl>
-Description: Contains the tutorials for the JADS course "Social Network Analysis for Data Science" (2021-2022). Update the package frequently, to have access to the most up-to-date tutorials. The tutorials will be added throughout the semester. The package contains a vignette that shows the most important functions you need to know for this course.
+Description: Contains the tutorials for the JADS course "Stats Bootcamp" (2021-2022). Update the package frequently, to have access to the most up-to-date tutorials. The tutorials will be added throughout the semester. The package contains a vignette that shows the most important functions you need to know for this course.
 Depends: R (>= 4.1.0)
 Encoding: UTF-8
 LazyData: true
-URL: https://github.com/SNAnalyst/SNA4DS
-BugReports: https://github.com/SNAnalyst/SNA4DS/issues
+URL: https://github.com/SNAnalyst/bootcamp2021
+BugReports: https://github.com/SNAnalyst/bootcamp2021/issues
 RoxygenNote: 7.1.1
 Imports:
     glue,
     gradethis,
-	igraph,
 	influenceR,
-	intergraph,
-    knitr,
+	knitr,
     learnr,
-	ndtv,
-	network,
-	networkDynamic,
 	remotes,
     rmarkdown,
 	rstudioapi,
-	sna
 Remotes:
 	github::rstudio-education/gradethis,
-	github::SNAnalyst/SNA4DSData
 Suggests:
 	desc,
 	fs,
